--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,15 +14,15 @@ android {
         applicationId "com.ak.bcaguide"
         minSdk 21
         targetSdk 34
-        versionCode 1
-        versionName "1.0"
+        versionCode 9
+        versionName "1.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -86,7 +86,8 @@ dependencies {
 
     // This for PDF File
 
-    implementation 'com.github.barteksc:android-pdf-viewer:2.3.0'
+//    implementation 'com.github.barteksc:android-pdf-viewer:2.3.0'
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.1'
     implementation 'com.github.kk121:File-Loader:1.2'
     implementation 'com.karumi:dexter:6.2.3'
 
@@ -104,3 +105,5 @@ dependencies {
 
 
 }
+
+android.buildTypes.release.ndk.debugSymbolLevel = 'FULL'
