--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,24 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.ak.bcaguide">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+
+
+
+
+
     <supports-screens
-        android:anyDensity="true"
-        android:largeScreens="false"
-        android:normalScreens="true"
         android:smallScreens="true"
-        android:xlargeScreens="false" />
+        android:normalScreens="true"
+        android:largeScreens="true"
+        android:xlargeScreens="false"
+        android:resizeable="true"
+        android:anyDensity="true" />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/home">
+        android:resizeableActivity="false"
+        android:theme="@style/home"
+        tools:targetApi="n"
+        tools:ignore="DiscouragedApi">
         <activity
             android:name="com.ak.bcaguide.Sem.SEM5.DMATH.D_math_paper_2021"
             android:exported="false" />
@@ -40,12 +51,12 @@
             android:name="com.ak.bcaguide.ForgetPasswordf"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:noHistory="true"/>
+            />
         <activity
             android:name="com.ak.bcaguide.Registrationf"
             android:exported="false"
             android:screenOrientation="portrait"
-            android:noHistory="true"/>
+            />
         <activity
             android:name="com.ak.bcaguide.Profilef"
             android:exported="true"
@@ -375,7 +386,7 @@
         <activity
             android:name="Sem.Paper_study_notes.sem1.English_sem1"
             android:exported="false"
-            android:screenOrientation="fullSensor" />
+            android:screenOrientation="portrait" />
         <activity
             android:name="Sem.SEM1.C.Practical_file.C_Practical_file"
             android:exported="false"
@@ -407,6 +418,7 @@
         <activity
             android:name="Sem.SEM1.C.Notes.English_notes"
             android:exported="false"
+            android:screenOrientation="portrait"
             android:theme="@style/full_screen" />
         <activity
             android:name="Sem.SEM1.C.Book.C_Pro_Book"
@@ -447,17 +459,22 @@
         <activity
             android:name="Sem.Sem1"
             android:exported="false"
+
             android:screenOrientation="portrait" />
         <activity
             android:name="com.ak.bcaguide.Home"
             android:exported="true"
+           android:resizeableActivity="true"
             android:screenOrientation="portrait"
-            android:theme="@style/mainhome" />
+            android:theme="@style/mainhome"
+             />
         <activity
             android:name="com.ak.bcaguide.main.Flash_screen"
             android:exported="true"
             android:noHistory="true"
+            android:configChanges="orientation"
             android:screenOrientation="portrait"
+            android:launchMode="standard"
             android:theme="@style/flash_screen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
