--- a/settings.gradle
+++ b/settings.gradle
@@ -3,6 +3,7 @@ pluginManagement {
         gradlePluginPortal()
         google()
         mavenCentral()
+
     }
 }
 dependencyResolutionManagement {
@@ -11,7 +12,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         jcenter()
-        maven{ url "https://jitpack.io"}
+        maven{ url 'https://jitpack.io'}
     }
 }
 rootProject.name = "BCA Guide"
